--- a/PlateletActive/PlateletActive.UnitTests/packages.config
+++ b/PlateletActive/PlateletActive.UnitTests/packages.config
@@ -3,6 +3,8 @@
   <package id="AutoClutch.AutoRepo" version="1.0.7" targetFramework="net452" />
   <package id="AutoClutch.AutoService" version="1.1.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net452" />
-  <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
+  <package id="Moq" version="4.2.1507.0118" targetFramework="net452" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net45" />
+  <package id="structuremap.automocking.moq" version="3.1.5.154" targetFramework="net452" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net452" />
 </packages>
