- Added console.  - Tested with console now works.

--- a/PlateletActive.Core/PlateletActive.Core.csproj
+++ b/PlateletActive.Core/PlateletActive.Core.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Models\HplcData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\HplcDataService.cs" />
+    <Compile Include="Services\IHplcDataService.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
