--- a/PlateletActive/packages.config
+++ b/PlateletActive/packages.config
@@ -3,5 +3,6 @@
   <package id="AutoClutch.AutoRepo" version="1.0.7" targetFramework="net452" />
   <package id="AutoClutch.AutoService" version="1.1.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net452" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net452" />
 </packages>
