--- a/PlateletActive/PlateletActive.Infrastructure/packages.config
+++ b/PlateletActive/PlateletActive.Infrastructure/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CsvHelper" version="2.13.2.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net45" />
 </packages>
