- Changed SampleNumber to SampleLocation.  - Added some best guess parsing instructions to the importer.

--- a/PlateletActive/PlateletActive.Data/PlateletActive.Data.csproj
+++ b/PlateletActive/PlateletActive.Data/PlateletActive.Data.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\201510170133175_RemoveSampleLocationAddSampleNameToModel.Designer.cs">
       <DependentUpon>201510170133175_RemoveSampleLocationAddSampleNameToModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510180130072_ChangeSampleNumberToSampleLocation.cs" />
+    <Compile Include="Migrations\201510180130072_ChangeSampleNumberToSampleLocation.Designer.cs">
+      <DependentUpon>201510180130072_ChangeSampleNumberToSampleLocation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PlateletActiveContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -95,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201510170133175_RemoveSampleLocationAddSampleNameToModel.resx">
       <DependentUpon>201510170133175_RemoveSampleLocationAddSampleNameToModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510180130072_ChangeSampleNumberToSampleLocation.resx">
+      <DependentUpon>201510180130072_ChangeSampleNumberToSampleLocation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
