- Added concentration column checker.  - Added client table.

--- a/PlateletActive.WindowsService/App.config
+++ b/PlateletActive.WindowsService/App.config
@@ -11,6 +11,7 @@
     <add key="inPath" value="C:\dev\PlateletActive\PlateletActive\PlateletActive.Infrastructure\LogFiles\In"/>
     <add key="outPath" value="C:\dev\PlateletActive\PlateletActive\PlateletActive.Infrastructure\LogFiles\Out"/>
     <add key="minutes" value="2"/>
+    <add key="clientId" value=""/>
   </appSettings>
   <connectionStrings>
     <!--<add name="PlateletActiveContext" connectionString="data source=.;initial catalog=CsvParser;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
