--- a/PlateletActive.Core/PlateletActive.Core.csproj
+++ b/PlateletActive.Core/PlateletActive.Core.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Interfaces\ILogFileGetter.cs" />
     <Compile Include="Interfaces\ILogFileMover.cs" />
+    <Compile Include="Models\Client.cs" />
     <Compile Include="Models\HplcData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\HplcDataService.cs" />
