--- a/PlateletActive.WindowsService/App.config
+++ b/PlateletActive.WindowsService/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="inPath" value="C:\dev\PlateletActive\PlateletActive\PlateletActive.Infrastructure\LogFiles\In"/>
-    <add key="outPath" value="C:\dev\PlateletActive\PlateletActive\PlateletActive.Infrastructure\LogFiles\Out"/>
+    <add key="inPath" value="C:\dev\PlateletActive\PlateletActive.Infrastructure\LogFiles\In"/>
+    <add key="outPath" value="C:\dev\PlateletActive\PlateletActive.Infrastructure\LogFiles\Out"/>
     <add key="minutes" value="2"/>
     <add key="clientId" value=""/>
   </appSettings>
