--- a/PlateletActive/PlateletActive.csproj
+++ b/PlateletActive/PlateletActive.csproj
@@ -80,16 +80,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PlateletActive.CompositionRoot\PlateletActive.CompositionRoot.csproj">
+      <Project>{3cd8859a-c2c1-491e-8546-f005845c7782}</Project>
+      <Name>PlateletActive.CompositionRoot</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PlateletActive.Core\PlateletActive.Core.csproj">
       <Project>{bd976160-9e99-476f-8d93-01e9150ad566}</Project>
       <Name>PlateletActive.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="PlateletActive.CompositionRoot\PlateletActive.CompositionRoot.csproj">
-      <Project>{3cd8859a-c2c1-491e-8546-f005845c7782}</Project>
-      <Name>PlateletActive.CompositionRoot</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
