--- a/PlateletActive.CompositionRoot/PlateletActive.CompositionRoot.csproj
+++ b/PlateletActive.CompositionRoot/PlateletActive.CompositionRoot.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A46A88AB-EC97-4D61-97EB-7C264805EE17}</ProjectGuid>
+    <ProjectGuid>{3CD8859A-C2C1-491E-8546-F005845C7782}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PlateletActive.Data</RootNamespace>
-    <AssemblyName>PlateletActive.Data</AssemblyName>
+    <RootNamespace>PlateletActive.CompositionRoot</RootNamespace>
+    <AssemblyName>PlateletActive.CompositionRoot</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,12 +31,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Auto.Repo, Version=1.0.6.6, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoClutch.AutoRepo.1.0.7\lib\net45\Auto.Repo.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Auto.Service, Version=1.0.8.14, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoClutch.AutoService.1.1.0\lib\net45\Auto.Service.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Omu.ValueInjecter, Version=2.3.3.0, Culture=neutral, PublicKeyToken=c7694541b0ac80e4, processorArchitecture=MSIL">
+      <HintPath>..\packages\valueinjecter.2.3.3\lib\net35\Omu.ValueInjecter.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="StructureMap, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
@@ -50,8 +62,6 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,32 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\201510170108284_ChangeFermNumberAndAddUserToDatabaseModel.cs" />
-    <Compile Include="Migrations\201510170108284_ChangeFermNumberAndAddUserToDatabaseModel.Designer.cs">
-      <DependentUpon>201510170108284_ChangeFermNumberAndAddUserToDatabaseModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201510170109432_ChangeFermNumberAndAddUserToDatabaseModel2.cs" />
-    <Compile Include="Migrations\201510170109432_ChangeFermNumberAndAddUserToDatabaseModel2.Designer.cs">
-      <DependentUpon>201510170109432_ChangeFermNumberAndAddUserToDatabaseModel2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201510170133175_RemoveSampleLocationAddSampleNameToModel.cs" />
-    <Compile Include="Migrations\201510170133175_RemoveSampleLocationAddSampleNameToModel.Designer.cs">
-      <DependentUpon>201510170133175_RemoveSampleLocationAddSampleNameToModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201510180130072_ChangeSampleNumberToSampleLocation.cs" />
-    <Compile Include="Migrations\201510180130072_ChangeSampleNumberToSampleLocation.Designer.cs">
-      <DependentUpon>201510180130072_ChangeSampleNumberToSampleLocation.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201510190211214_AddClientsTable.cs" />
-    <Compile Include="Migrations\201510190211214_AddClientsTable.Designer.cs">
-      <DependentUpon>201510190211214_AddClientsTable.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201510190213592_UpperCamelCaseClientsTable.cs" />
-    <Compile Include="Migrations\201510190213592_UpperCamelCaseClientsTable.Designer.cs">
-      <DependentUpon>201510190213592_UpperCamelCaseClientsTable.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="PlateletActiveContext.cs" />
+    <Compile Include="DefaultRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -93,30 +78,18 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\PlateletActive.Core\PlateletActive.Core.csproj">
+    <ProjectReference Include="..\PlateletActive.Core\PlateletActive.Core.csproj">
       <Project>{bd976160-9e99-476f-8d93-01e9150ad566}</Project>
       <Name>PlateletActive.Core</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201510170108284_ChangeFermNumberAndAddUserToDatabaseModel.resx">
-      <DependentUpon>201510170108284_ChangeFermNumberAndAddUserToDatabaseModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201510170109432_ChangeFermNumberAndAddUserToDatabaseModel2.resx">
-      <DependentUpon>201510170109432_ChangeFermNumberAndAddUserToDatabaseModel2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201510170133175_RemoveSampleLocationAddSampleNameToModel.resx">
-      <DependentUpon>201510170133175_RemoveSampleLocationAddSampleNameToModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201510180130072_ChangeSampleNumberToSampleLocation.resx">
-      <DependentUpon>201510180130072_ChangeSampleNumberToSampleLocation.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201510190211214_AddClientsTable.resx">
-      <DependentUpon>201510190211214_AddClientsTable.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201510190213592_UpperCamelCaseClientsTable.resx">
-      <DependentUpon>201510190213592_UpperCamelCaseClientsTable.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\PlateletActive.Data\PlateletActive.Data.csproj">
+      <Project>{a46a88ab-ec97-4d61-97eb-7c264805ee17}</Project>
+      <Name>PlateletActive.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PlateletActive.Infrastructure\PlateletActive.Infrastructure.csproj">
+      <Project>{e2c2167e-692c-4540-89df-a0af23993a9d}</Project>
+      <Name>PlateletActive.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
