--- a/PlateletActive.Infrastructure/PlateletActive.Infrastructure.csproj
+++ b/PlateletActive.Infrastructure/PlateletActive.Infrastructure.csproj
@@ -71,7 +71,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\PlateletActive.Core\PlateletActive.Core.csproj">
+    <ProjectReference Include="..\PlateletActive.Core\PlateletActive.Core.csproj">
       <Project>{bd976160-9e99-476f-8d93-01e9150ad566}</Project>
       <Name>PlateletActive.Core</Name>
     </ProjectReference>
