--- a/PlateletActive.IntegrationTests/PlateletActive.IntegrationTests.csproj
+++ b/PlateletActive.IntegrationTests/PlateletActive.IntegrationTests.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\PlateletActive.Core\PlateletActive.Core.csproj">
+    <ProjectReference Include="..\PlateletActive.Core\PlateletActive.Core.csproj">
       <Project>{bd976160-9e99-476f-8d93-01e9150ad566}</Project>
       <Name>PlateletActive.Core</Name>
     </ProjectReference>
