- Fixed bug that was throwing an exception if the file already exists in the out folder.

--- a/PlateletActive.WindowsService/App.config
+++ b/PlateletActive.WindowsService/App.config
@@ -12,9 +12,9 @@
     <add key="outPath" value="C:\dev\PlateletActive\PlateletActive.Infrastructure\LogFiles\Out"/>
     <add key="minutes" value="2"/>
     <add key="clientId" value=""/>
+    <add key="version" value="0.3"/>
   </appSettings>
   <connectionStrings>
-    <!--<add name="PlateletActiveContext" connectionString="data source=.;initial catalog=CsvParser;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
     <add name="PlateletActiveContext" connectionString="data source=.;initial catalog=CsvParser;user id=luke;password=luke;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
