--- a/PlateletActive.Infrastructure/PlateletActive.Infrastructure.csproj
+++ b/PlateletActive.Infrastructure/PlateletActive.Infrastructure.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Getters\BionLogFileGetter.cs" />
     <Compile Include="Getters\LogFileGetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setters\LogFileMover.cs" />
