--- a/PlateletActive.Core/PlateletActive.Core.csproj
+++ b/PlateletActive.Core/PlateletActive.Core.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Interfaces\ILogFileMover.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\HplcData.cs" />
+    <Compile Include="Objects\Error.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\HplcDataService.cs" />
     <Compile Include="Interfaces\IHplcDataService.cs" />
