--- a/PlateletActive.Data/PlateletActive.Data.csproj
+++ b/PlateletActive.Data/PlateletActive.Data.csproj
@@ -120,6 +120,10 @@
     <Compile Include="Migrations\201510220251362_UndoTestMessageTable2.Designer.cs">
       <DependentUpon>201510220251362_UndoTestMessageTable2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512032303082_MinorNameChanges.cs" />
+    <Compile Include="Migrations\201512032303082_MinorNameChanges.Designer.cs">
+      <DependentUpon>201512032303082_MinorNameChanges.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PlateletActiveContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -164,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201510220251362_UndoTestMessageTable2.resx">
       <DependentUpon>201510220251362_UndoTestMessageTable2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512032303082_MinorNameChanges.resx">
+      <DependentUpon>201512032303082_MinorNameChanges.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
